# auto-gpt

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/components/: AssistantResponse.jsx  AuthScreen.jsx  AuthScreen.test.jsx  ChatMessageList.jsx  Composer.jsx  DocumentsDrawer.jsx  DocumentsDrawer.test.jsx  HistorySidebar.jsx  JobsDrawer.jsx  JobsDrawer.test.jsx  LoadingResponse.jsx  ProfileDrawer.jsx  SourcesDrawer.jsx  TopBar.jsx
frontend/src/styles/: animations.css  auth.css  base.css  chat.css  drawers.css  layout.css
src/research_agent/: __init__.py  agent.py  api_server.py  cli.py  config.py  llm.py  models.py  multi_agent.py  observability.py  presentation.py  quality.py  report_generator.py  search.py  summarizer.py  vector_store.py
src/research_agent_django/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/research_agent_web/: admin.py  apps.py  document_service.py  export_service.py  middleware.py  models.py  observability.py  retention.py  signals.py  tasks.py  tests.py  urls.py  views.py
src/research_agent_web/management/commands/: cleanup_processed_documents.py
src/research_agent_web/migrations/: 0001_initial.py  0002_savedreport.py  0003_conversationsession_owner.py  0004_userdocument_documentchunk.py  0005_documenttask_and_updates.py  0006_documenttask_canceled.py  0007_research_depth_fields.py  0008_production_readiness.py
