[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-research-agent"
version = "0.1.0"
description = "Autonomous AI Research Agent that gathers information, analyzes sources, and generates structured research reports."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.45.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langgraph>=0.2.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
